--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+	<button id="copy-btn">Copy</button>
 	<script type="module" src="./js/index.js"></script>
 </body>
 </html>
