ics file input: untested AI implementation

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Template</title>
-	<link rel="stylesheet" href="./styles/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Template</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-	<button id="copy-btn">Copy</button>
-	<script type="module" src="./js/index.js"></script>
+    <input type="file" id="ics-file" accept=".ics">
+    <button id="copy-btn">Copy</button>
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
